# DeSci

./: .gitignore  Cargo.toml  README.md  autobuild.txt  dfx.json  package-lock.json  package.json
frontend/: README.md  package.json
frontend/cleaned_backup/: next.config.js
frontend/cleaned_backup/src/app/: globals.css  layout.tsx  page.tsx
frontend/cleaned_backup/src/app/about/: page.tsx
frontend/cleaned_backup/src/app/dashboard/: page.tsx
frontend/cleaned_backup/src/app/explorer/: page.tsx
frontend/cleaned_backup/src/app/upload/: page.tsx
frontend/cleaned_backup/src/components/: Footer.tsx  Navbar.tsx  SpectraChart.tsx  ThemeProvider.tsx  UploadForm.tsx
frontend/cleaned_backup/src/lib/: api.ts
spectranet/: global.d.ts  package.json  tailwind.config.ts  tsconfig.json
spectranet/app/: layout.tsx  page.tsx
spectranet/app/about/: page.tsx
spectranet/app/api/: page.tsx
spectranet/app/dashboard/: layout.tsx  page.tsx
spectranet/app/explorer/: page.tsx
spectranet/app/governance/: page.tsx
spectranet/app/upload/: page.tsx
spectranet/components/: Footer.tsx  Logo.tsx  Nav.tsx  SpectraChart.tsx  SpectrumCard.tsx  StatPanel.tsx  ThemeToggle.tsx  UploadWidget.tsx
spectranet/lib/: dummyData.ts  icpClient.ts
src/: despec_canister.did  lib.rs
src/spectranet_canister_backend/: Cargo.toml
src/spectranet_canister_backend/src/: lib.did
src/spectranet_canister_frontend/: package.json
src/spectranet_canister_frontend/assets/: 404.html  index.html  index.txt
src/spectranet_canister_frontend/src/: App.jsx
(+3 files in other folders)
