[package]
name = "despec_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10", features = ["candid_method"] }
ic-cdk = "0.9"
ic-cdk-macros = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
leb128 = "0.2"
